--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".specialistUser"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -23,12 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".specialistLoginActivity">
-
-        </activity>
-        <activity android:name=".specialistSignupActivity">
-
-        </activity>
+        <activity android:name=".specialistLoginActivity"></activity>
+        <activity android:name=".specialistSignupActivity"></activity>
     </application>
 
 </manifest>
